Styling on the Projects page broke slightly with overlapping properties. Updating to fix.

--- a/src/styles.css
+++ b/src/styles.css
@@ -196,7 +196,6 @@ html {
 .projects-projects-col {
   display: flex;
   flex-direction: column;
-  justify-content: center !important;
 }
 
 .project-card {
